--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Super ELEC!!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Unlike ELSOC we have a website <img src="https://github.com/mooreorless212/superelec/blob/main/superelec.png" alt="SuperElec"> </p>
   </body>
 </html>
