--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,6 @@
     <title>Super ELEC!!</title>
   </head>
   <body>
-    <p>Unlike ELSOC we have a website <img src="https://github.com/mooreorless212/superelec/blob/main/superelec.png" alt="SuperElec"> </p>
+    <p>Unlike ELSOC we have a website <img src="https://cdn.discordapp.com/attachments/813633639383302148/944068253167271946/qr-code.png" alt="SuperElec"> </p>
   </body>
 </html>
