--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <title>Super ELEC!!</title>
   </head>
   <body>
-    <p>Unlike ELSOC we have a website <img src="https://cdn.discordapp.com/attachments/813633639383302148/944068253167271946/qr-code.png" alt="SuperElec"> </p>
+    <p>Unlike ELSOC we have a website built from scratch and not some third party.</p>
+    <img src="https://cdn.discordapp.com/attachments/813633639383302148/944068253167271946/qr-code.png" alt="SuperElec">
   </body>
 </html>
